# colorsys.rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: test.yml  tests.yml
src/: consts.rs  converters.rs  err.rs  error.rs  from_str.rs  lib.rs  macros.rs  misc.rs  normalize.rs  prelude.rs  ratio_converters.rs  tests.rs
src/_old/: color.rs  converters.rs  error.rs  from_str.rs  grayscale.rs  hex.rs  lib.rs  normalize.rs  tests.rs
src/_old/colors/: hsl.rs  mod.rs  rgb.rs
src/ansi/: mod.rs
src/cmyk/: from.rs  mod.rs  ratio.rs
src/colors/: hsl.rs  hsla.rs  mod.rs  rgb.rs  rgba.rs
src/common/: alpha.rs  approx.rs  from_str.rs  hsv_hsl_from_str.rs  iter.rs  mod.rs  ops.rs  tuple_to_string.rs
src/converters/: hex_num_to_rgb.rs  hex_to_rgb.rs  hsl_to_rgb.rs  mod.rs  rgb_cmyk.rs  rgb_to_css_string.rs  rgb_to_hex.rs  rgb_to_hsl.rs
src/hsl/: converters.rs  from.rs  mod.rs  ops.rs  opts.rs  ratio.rs  tests.rs  transform.rs
src/rgb/: converters.rs  from.rs  from_str.rs  grayscale.rs  iter.rs  mod.rs  ops.rs  ratio.rs  tests.rs  transform.rs
src/units/: alpha.rs  into.rs  iter.rs  mod.rs  unit.rs
tests/: integration_test.rs  tst.rs
