[package]
name = "colorsys"
version = "0.6.0"
description = "A module for color conversion and mutation. For now works with RGB(a)( as hexadecimal too), HSL(a) color models"
authors = ["mz <emgyrz@gmail.com>"]
license = "MIT"
homepage = "https://github.com/emgyrz/colorsys.rs"
repository = "https://github.com/emgyrz/colorsys.rs.git"
keywords = ["colors", "converter", "css", "rgb", "hsl"]
categories = [ "graphics"]
edition = "2018"
readme = "README.md"

[dependencies]
